adicionando um pouco de conteudo

--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,29 @@
 body{
     
 }
+main#conteiner{
+    border: 1px solid black;
+    width: 80%;
+    margin: 20px auto 0 auto;
+    box-shadow: 2px 2px 4px black;
+    background: linear-gradient(to bottom, #173c5e, #eca582);
+    color: #ffffff;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+}
+section.postagem{
+    background-image: src("imagens/foto-mulher.jpg") no-repeat;
+    padding: 10px;
+}
+img#img{
+    width: 50%;
+    box-shadow: 1px 1px 3px black;
+}
+footer{
+    font-size: 8pt;
+    color: black;
+    text-align: center;
+    margin-top: 10px;
+}
