--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@
 body{
     
 }
+main#conteiner{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 section.postagem{
     border: 1px solid black;
     width: 80%;
