--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,14 @@ main#conteiner{
     width: 100%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
+}
+section#top-bar{
+    width: 100%;
+    height: 8vh;
+    background: #dddddd;
+    box-shadow: 1px 1px 3px #000000;
 }
 section.postagem{
     border: 1px solid black;
