--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ div.sidebar ul li a{
     color: black;
     font-size: 25pt;
     border: 1px solid black;
-    padding: auto;
+    padding: ;
 }
 #check{
     display: none;
