--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,8 @@ footer.rodape{
     color: black;
     text-align: center;
     margin-top: 10px;
+    bottom: 0;
+    position: absolute;
 }
 @media screen and (max-width: 750px){
   div.sidebar{
