--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Passions+Conflict&family=Sevillana&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 body{
-    
+
 }
 main#conteiner{
     width: 100%;
@@ -12,11 +13,14 @@ main#conteiner{
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    text-align: justify;
+    font-family: 'Sans Serif', Arial;
+
 }
 section#top-bar{
     width: 100%;
     height: 8vh;
-    background: #dddddd;
+    background: #103252;
     box-shadow: 1px 1px 3px #000000;
    
 }
@@ -36,7 +40,7 @@ div.sidebar ul li a{
     color: black;
     font-size: 20pt;
     box-shadow: 2px 2px 4px #000000;
-    background: white;
+    background: #ffffff;
     transition: all .5s ease;
     padding: 0px 5px 0px 5px;
 
@@ -66,6 +70,8 @@ section.postagem{
     background: linear-gradient(to bottom, #173c5e, #eca582);
     color: #ffffff;
     border-radius: 10px;
+    font-family: 'sevillana', cursive;
+    font-size: 20pt;
 }
 img#img{
     width: 50%;
@@ -82,8 +88,8 @@ footer.rodape{
 @media screen and (max-width: 750px){
   div.sidebar{
     margin-top:25px;
-    background: rgba(251, 251, 251, 0.863);
-    width: 40%;
+    background: #dddddd;
+    width: 30%;
     height: 400px;
     left: -300px;
     z-index: 100;
@@ -91,6 +97,7 @@ footer.rodape{
     box-shadow: 1px 1px 3px #000000;
     color: #000000;
     text-align: center;
+    border-radius: 
 
   }
   div.sidebar ul{
@@ -99,11 +106,15 @@ footer.rodape{
   }
   div.sidebar ul li{
     padding: 10px;
+    width: 100%;
+    position: relative;
   }
   i#menu{
     position: relative;
     left: 2%;
     display: block;
+    color: #ffffff;
+    font-size: 25pt;
     
 }
 
