--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,8 @@ main#conteiner{
 section#top-bar{
     width: 100%;
     height: 8vh;
-    background: #103252;
-    box-shadow: 1px 1px 3px #000000;
+    background: linear-gradient(to bottom, #103252, 90%, #ffffff);
+    /*box-shadow: 1px 1px 3px #000000;*/
    
 }
 div.sidebar{
@@ -67,11 +67,11 @@ section.postagem{
     margin: 20px auto 0 auto;
     padding: 10px;
     box-shadow: 2px 2px 4px black;
-    background: linear-gradient(to bottom, #173c5e, #eca582);
+    background: linear-gradient(to bottom, #173c5e, #173c5ed4);
     color: #ffffff;
     border-radius: 10px;
     font-family: 'sevillana', cursive;
-    font-size: 20pt;
+    font-size: 15pt;
 }
 img#img{
     width: 50%;
