--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,41 @@ section#menu{
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-shadow: 3px 3px 5px #171433;
 }
 section#menu ul{
-
+   width: 100%;
+    
+}
+section#menu ul li{
+    background-color: #dddddd;
+    margin-top: 25px;
+    width: 50%;
+    height: 25px;
+    margin: 10px auto 0 10%;
+    text-align: center;
+    list-style: none;
+    padding-top: 3px;
+}
+section#menu ul li a{
+    text-decoration: none;
+    text-transform: uppercase;
+}
+section.postagem{
+    background-image: url("imagens/background.png");
+    width: 950px;
+    height: 632px;
 }
 #check{
     display: none;
+}
+span.menu{
+    color: #FFB800;
+    background-color: #7A41E0;
+    font-size: 25pt;
+    padding: 0 25px 0 25px;
+    margin: 10px auto 0 10%;
+    width: 60%;
+    position: relative;
+    text-align: center;
 }
