--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,13 @@
 }
 body{
     width: 100%;
+    height: 100%;
     background-attachment: fixed;
+    display: flex;
 }
 section#menu{
     width: 30%;
-    height: 100vw;
+    height: 100vh;
     background: linear-gradient(to bottom, #171433, #1500ffa1);
     display: flex;
     flex-direction: column;
@@ -36,9 +38,18 @@ section#menu ul li a{
     text-transform: uppercase;
 }
 section.postagem{
-    background-image: url("imagens/background.png");
-    width: 950px;
-    height: 632px;
+    background-image: url("/imagens/background.png");
+    width: 60%;
+    height: 627px;
+    float: right;
+    top:0;
+    margin: 0 auto 0 auto;
+}
+
+footer{
+    bottom: 0;
+    position: absolute;
+    left: 40%;
 }
 #check{
     display: none;
