--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@ section#menu{
     flex-direction: column;
     align-items: center;
     box-shadow: 3px 3px 5px #171433;
+
+    
 }
 section#menu ul{
    width: 100%;
@@ -44,6 +46,15 @@ section.postagem{
     float: right;
     top:0;
     margin: 0 auto 0 auto;
+}
+section.postagem p{
+    background-color: #dddddd9c;
+    text-align: justify;
+    padding: 20px;
+    position: relative;
+    top: 370px;
+    margin-left: 30%;
+    width: 70%;
 }
 
 footer{
